--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ textarea{
   resize: none;
   color: #000000;
   border-left: 1px solid black;
-  padding: 10px;
 }
 
 .jumbotron {
@@ -34,6 +33,10 @@ textarea{
   white-space: pre-wrap;
   height: 80px;
   border-top: 1px solid white;;
+}
+
+.row2 {
+  height:80px;
 }
 
 .hour {
@@ -68,4 +71,8 @@ textarea{
 .saveBtn i:hover {
   font-size: 20px;
   transition: all .3s ease-in-out;
+}
+
+.whiteBorder {
+  border-top: 1px solid white;
 }
